--- a/previews/PR212/Tutorials/getting_started/first_example/index.html
+++ b/previews/PR212/Tutorials/getting_started/first_example/index.html
@@ -45,8 +45,8 @@ end)
     @endowment(PK, 100)
 end)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">$Demand: CONS
     D: PW    Q: 200.0
-    E: PL    Q: 100
     E: PK    Q: 100
+    E: PL    Q: 100
 </code></pre><p>In this simple model it can be useful to print the model to verify everything is as expected. This is not a standard step, but it can be useful for debugging.</p><pre><code class="language-julia hljs">M_basic</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">
 $Sectors:
 W
@@ -90,10 +90,10 @@ $Production: Y
 
 $Demand: CONS
     D: PW    Q: 200.0
-    E: PL    Q: 100
     E: PK    Q: 100
+    E: PL    Q: 100
 
-</code></pre><p>Now we solve the model. We use the <a href="../../../docs/#MPSGE.solve!-Tuple{MPSGE.AbstractMPSGEModel}"><code>solve!</code></a> function to solve the model. The first solve is usually at the benchmark level, which means all values are as they appear in the table. This means the system should already be solved and we should see that reflected in the output, the residual should be zero (or close to it)</p><pre><code class="language-julia hljs">solve!(M_basic, cumulative_iteration_limit=0)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_eLtShY
+</code></pre><p>Now we solve the model. We use the <a href="../../../docs/#MPSGE.solve!-Tuple{MPSGE.AbstractMPSGEModel}"><code>solve!</code></a> function to solve the model. The first solve is usually at the benchmark level, which means all values are as they appear in the table. This means the system should already be solved and we should see that reflected in the output, the residual should be zero (or close to it)</p><pre><code class="language-julia hljs">solve!(M_basic, cumulative_iteration_limit=0)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_bfFLqs
  &gt; cumulative_iteration_limit 0
 Read of options file complete.
 
@@ -112,8 +112,8 @@ Crash Iterations. . . . 0
 Gradient Steps. . . . . 0
 Function Evaluations. . 1
 Gradient Evaluations. . 1
-Basis Time. . . . . . . 0.000002
-Total Time. . . . . . . 1.492059
+Basis Time. . . . . . . 0.000001
+Total Time. . . . . . . 1.497018
 Residual. . . . . . . . 0.000000e+00
 Postsolved residual: 0.0000e+00
 
@@ -172,11 +172,11 @@ end)
     @endowment(PK, 100)
 end)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">$Demand: CONS
     D: PW    Q: 200.0
-    E: PK    Q: 100
     E: PL    Q: 100
+    E: PK    Q: 100
 </code></pre><p>First, we check the model at the benchmark level. This is to ensure we&#39;ve entered our data correctly. We will also fix the numeraire to be <code>PW</code> and set the value to 1. This is not necessary, but it in this case it makes the results easier to interpret as it is the only welfare price variable.</p><pre><code class="language-julia hljs">fix(PW, 1)
 
-solve!(M_tax, cumulative_iteration_limit=0)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_D4RyDP
+solve!(M_tax, cumulative_iteration_limit=0)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_zlohFh
  &gt; cumulative_iteration_limit 0
 Read of options file complete.
 
@@ -195,8 +195,8 @@ Crash Iterations. . . . 0
 Gradient Steps. . . . . 0
 Function Evaluations. . 1
 Gradient Evaluations. . 1
-Basis Time. . . . . . . 0.000001
-Total Time. . . . . . . 0.000086
+Basis Time. . . . . . . 0.000002
+Total Time. . . . . . . 0.000088
 Residual. . . . . . . . 0.000000e+00
 Postsolved residual: 0.0000e+00
 
@@ -204,7 +204,7 @@ Postsolved residual: 0.0000e+00
 Solver Status: LOCALLY_SOLVED
 Model Status: FEASIBLE_POINT</code></pre><p>Let&#39;s impose a 10% tax on labor. We do this by setting the value of <code>labor_tax</code> to 0.1 and then solving the model. Notice we do not set the cumulative iteration limit to zero, this is because we are not at the benchmark level. Feel free to try, you&#39;ll see what an unbalanced model looks like.</p><pre><code class="language-julia hljs">set_value!(labor_tax, 0.1)
 
-solve!(M_tax)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_8WGjlp
+solve!(M_tax)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Reading options file /tmp/jl_Oo2YzD
  &gt; cumulative_iteration_limit 10000
 Read of options file complete.
 
@@ -232,8 +232,8 @@ Crash Iterations. . . . 1
 Gradient Steps. . . . . 0
 Function Evaluations. . 4
 Gradient Evaluations. . 4
-Basis Time. . . . . . . 0.000030
-Total Time. . . . . . . 0.000317
+Basis Time. . . . . . . 0.000027
+Total Time. . . . . . . 0.000309
 Residual. . . . . . . . 1.227167e-12
 Postsolved residual: 1.2272e-12
 
@@ -261,10 +261,10 @@ end
 
 p = plot(df, x=:tax_value, y=:welfare, color=:type,
     Layout(title= &quot;Labor vs Capital tax rates&quot;)
-)</code></pre><div id='jcDOtkkRRl' class='' style=';'></div>
+)</code></pre><div id='KaDaPzzTXw' class='' style=';'></div>
 <script type="module">
     import Plotly from "https://esm.sh/plotly.js-dist-min@2.24.2"
-    const PLOT = document.getElementById("jcDOtkkRRl")
+    const PLOT = document.getElementById("KaDaPzzTXw")
     const plot_obj = {"data": [{"showlegend":true,"marker":{"color":"#EF553B"},"xaxis":"x","y":[200.0,199.99907017702031,199.99631156531242,199.9917687415566,199.98548527022953,199.97750336969435,199.96786403569166,199.9566070860658,199.94377120345027,199.92939397601495,199.9135119363716,199.89616059873111,199.87737449439416,199.85718720566314,199.83563139824872,199.81273885224672,199.7885404917568,199.76306641320778,199.73634635625123,199.7084081679946,199.6792799315566,199.64898871595284,199.6175608918028,199.58502215375495,199.5513975420288,199.51671146311614,199.48098770968008,199.44424947968935,199.40651939482262,199.36781951817568,199.32817137130337,199.28759595062692,199.24611374323175,199.20374474208762,199.1605084607103,199.11642394729495,199.07150979833938,199.0257841717825,198.97926479967524,198.93196900040613,198.8839136905001,198.8351153960061,198.7855902634928,198.7353540706674,198.68442223663246,198.63280983179797,198.58053158745682,198.52760190504424,198.47403486508819,198.4198442358654,198.36504348177414],"type":"scatter","name":"capital","yaxis":"y","legendgroup":"capital","x":[0.0,0.01,0.02,0.03,0.04,0.05,0.06,0.07,0.08,0.09,0.1,0.11,0.12,0.13,0.14,0.15,0.16,0.17,0.18,0.19,0.2,0.21,0.22,0.23,0.24,0.25,0.26,0.27,0.28,0.29,0.3,0.31,0.32,0.33,0.34,0.35,0.36,0.37,0.38,0.39,0.4,0.41,0.42,0.43,0.44,0.45,0.46,0.47,0.48,0.49,0.5]},{"showlegend":true,"marker":{"color":"#636efa"},"xaxis":"x","y":[200.0,199.99907333131915,199.99633581676534,199.99184936895543,199.9856735557851,199.97786622528608,199.96848205133446,199.95757447854479,199.94519478321345,199.93139237622134,199.9162148821291,199.8997082143818,199.88191664684112,199.8628828818509,199.8426481150283,199.82125209695926,199.79873319196926,199.77512843412637,199.75047358062542,199.72480316269642,199.69815053416102,199.67054791777073,199.64202644943444,199.61261622044947,199.5823463178378,199.55124486288327,199.51933904796405,199.4866551717642,199.45321867294493,199.41905416235625,199.3841854538557,199.34863559380906,199.31242688933054,199.27558093532926,199.23811864041676,199.20006025173137,199.16142537872952,199.12223301599465,199.08250156510894,199.04224885563158,199.00149216522567,198.96024823897304,198.91853330791275,198.87636310684223,198.83375289140892,198.7907174545315,198.74727114217384,198.7034278685054,198.65920113047272,198.61460402180887,198.56964924650578],"type":"scatter","name":"labor","yaxis":"y","legendgroup":"labor","x":[0.0,0.01,0.02,0.03,0.04,0.05,0.06,0.07,0.08,0.09,0.1,0.11,0.12,0.13,0.14,0.15,0.16,0.17,0.18,0.19,0.2,0.21,0.22,0.23,0.24,0.25,0.26,0.27,0.28,0.29,0.3,0.31,0.32,0.33,0.34,0.35,0.36,0.37,0.38,0.39,0.4,0.41,0.42,0.43,0.44,0.45,0.46,0.47,0.48,0.49,0.5]}], "layout": {"xaxis":{"title":{"text":"tax_value"}},"template":{"layout":{"coloraxis":{"colorbar":{"ticks":"","outlinewidth":0}},"xaxis":{"gridcolor":"white","zerolinewidth":2,"title":{"standoff":15},"ticks":"","zerolinecolor":"white","automargin":true,"linecolor":"white"},"hovermode":"closest","paper_bgcolor":"white","geo":{"showlakes":true,"showland":true,"landcolor":"#E5ECF6","bgcolor":"white","subunitcolor":"white","lakecolor":"white"},"colorscale":{"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"yaxis":{"gridcolor":"white","zerolinewidth":2,"title":{"standoff":15},"ticks":"","zerolinecolor":"white","automargin":true,"linecolor":"white"},"shapedefaults":{"line":{"color":"#2a3f5f"}},"hoverlabel":{"align":"left"},"mapbox":{"style":"light"},"polar":{"angularaxis":{"gridcolor":"white","ticks":"","linecolor":"white"},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","ticks":"","linecolor":"white"}},"autotypenumbers":"strict","font":{"color":"#2a3f5f"},"ternary":{"baxis":{"gridcolor":"white","ticks":"","linecolor":"white"},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","ticks":"","linecolor":"white"},"aaxis":{"gridcolor":"white","ticks":"","linecolor":"white"}},"annotationdefaults":{"arrowhead":0,"arrowwidth":1,"arrowcolor":"#2a3f5f"},"plot_bgcolor":"#E5ECF6","title":{"x":0.05},"scene":{"xaxis":{"gridcolor":"white","gridwidth":2,"backgroundcolor":"#E5ECF6","ticks":"","showbackground":true,"zerolinecolor":"white","linecolor":"white"},"zaxis":{"gridcolor":"white","gridwidth":2,"backgroundcolor":"#E5ECF6","ticks":"","showbackground":true,"zerolinecolor":"white","linecolor":"white"},"yaxis":{"gridcolor":"white","gridwidth":2,"backgroundcolor":"#E5ECF6","ticks":"","showbackground":true,"zerolinecolor":"white","linecolor":"white"}},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"]},"data":{"barpolar":[{"type":"barpolar","marker":{"line":{"color":"#E5ECF6","width":0.5}}}],"carpet":[{"aaxis":{"gridcolor":"white","endlinecolor":"#2a3f5f","minorgridcolor":"white","startlinecolor":"#2a3f5f","linecolor":"white"},"type":"carpet","baxis":{"gridcolor":"white","endlinecolor":"#2a3f5f","minorgridcolor":"white","startlinecolor":"#2a3f5f","linecolor":"white"}}],"scatterpolar":[{"type":"scatterpolar","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"parcoords":[{"line":{"colorbar":{"ticks":"","outlinewidth":0}},"type":"parcoords"}],"scatter":[{"type":"scatter","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"histogram2dcontour":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"histogram2dcontour","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"contour":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"contour","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"scattercarpet":[{"type":"scattercarpet","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"mesh3d":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"mesh3d"}],"surface":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"surface","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"scattermapbox":[{"type":"scattermapbox","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"scattergeo":[{"type":"scattergeo","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"histogram":[{"type":"histogram","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"pie":[{"type":"pie","automargin":true}],"choropleth":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"choropleth"}],"heatmapgl":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"heatmapgl","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"bar":[{"type":"bar","error_y":{"color":"#2a3f5f"},"error_x":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5}}}],"heatmap":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"heatmap","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"contourcarpet":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"contourcarpet"}],"table":[{"type":"table","header":{"line":{"color":"white"},"fill":{"color":"#C8D4E3"}},"cells":{"line":{"color":"white"},"fill":{"color":"#EBF0F8"}}}],"scatter3d":[{"line":{"colorbar":{"ticks":"","outlinewidth":0}},"type":"scatter3d","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"scattergl":[{"type":"scattergl","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"histogram2d":[{"colorbar":{"ticks":"","outlinewidth":0},"type":"histogram2d","colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]}],"scatterternary":[{"type":"scatterternary","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}],"scatterpolargl":[{"type":"scatterpolargl","marker":{"colorbar":{"ticks":"","outlinewidth":0}}}]}},"legend":{"tracegroupgap":0,"title":{"text":"type"}},"margin":{"l":50,"b":50,"r":50,"t":60},"title":"Labor vs Capital tax rates","yaxis":{"title":{"text":"welfare"}}}, "config": {"showLink":false,"editable":false,"responsive":true,"staticPlot":false,"scrollZoom":true}}
     Plotly.newPlot(PLOT, plot_obj)
 
@@ -274,4 +274,4 @@ p = plot(df, x=:tax_value, y=:welfare, color=:type,
     // For the height we have to also put a fixed value in case the plot is put on a non-fixed-size container (like the default wrapper)
     PLOT.style.height = plot_obj.layout.height ? "" : "100%"
 </script>
-<hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../introduction/">« Introduction</a><a class="docs-footer-nextpage" href="../../intermediate_examples/M22/">Closed <span>$2\times2$</span> Economy with Intermediate Inputs and Nesting »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Monday 16 June 2025 19:50">Monday 16 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../introduction/">« Introduction</a><a class="docs-footer-nextpage" href="../../intermediate_examples/M22/">Closed <span>$2\times2$</span> Economy with Intermediate Inputs and Nesting »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Monday 16 June 2025 20:32">Monday 16 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
